# aoc24

./: Cargo.toml
.github/workflows/: rust.yml
common/src/: lib.rs
day01/src/: main.rs
day01_0/: Cargo.toml
day01_0/src/: main.rs
day01_1/: Cargo.toml
day01_1/src/: main.rs
day01_2/: Cargo.toml
day01_2/src/: main.rs
day01_lib/: Cargo.toml
day01_lib/src/: lib.rs
day02_1/: Cargo.toml
day02_1/src/: main.rs
day02_2/: Cargo.toml
day02_2/src/: main.rs
day02_lib/: Cargo.toml
day02_lib/src/: lib.rs
day03_1/: Cargo.toml
day03_1/src/: main.rs
day03_2/: Cargo.toml
day03_2/src/: main.rs
day03_lib/: Cargo.toml
day03_lib/src/: lib.rs
day04_1/: Cargo.toml
day04_1/src/: main.rs
day04_2/: Cargo.toml
day04_2/src/: main.rs
day04_lib/: Cargo.toml
day04_lib/src/: lib.rs
day05_1/: Cargo.toml
day05_1/src/: main.rs
day05_2/: Cargo.toml
day05_2/src/: main.rs
day05_lib/: Cargo.toml
day05_lib/src/: lib.rs
day06_1/: Cargo.toml
day06_1/src/: main.rs
day06_2/: Cargo.toml
day06_2/src/: main.rs
day06_lib/: Cargo.toml
day06_lib/src/: lib.rs
day07_1/: Cargo.toml
day07_1/src/: main.rs
day07_2/: Cargo.toml
day07_2/src/: main.rs
day07_lib/: Cargo.toml
day07_lib/src/: lib.rs
day08_1/: Cargo.toml
day08_1/src/: main.rs
day08_2/: Cargo.toml
day08_2/src/: main.rs
day08_lib/: Cargo.toml
day08_lib/src/: lib.rs
day09_1/: Cargo.toml
day09_1/src/: main.rs
day09_2/: Cargo.toml
day09_2/src/: main.rs
day09_lib/: Cargo.toml
day09_lib/src/: lib.rs
