[workspace]

resolver = "2"
members = [
    "common",
    "day01_1",
    "day01_2",
    "day01_lib",
    "day02_1",
    "day02_2",
    "day02_lib",
    "day03_1",
    "day03_2",
    "day03_lib",
    "day04_1",
    "day04_2",
    "day04_lib",
    "day05_1",
    "day05_2",
    "day05_lib",
    "day06_1",
    "day06_2",
    "day06_lib",
    "day07_1",
    "day07_2",
    "day07_lib",
    "day08_1",
    "day08_2",
    "day08_lib",
    "day09_1",
    "day09_2",
    "day09_lib",
]
